--- a/database/templates/database/index.html
+++ b/database/templates/database/index.html
@@ -1,146 +1,172 @@
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'database/style.css' %}" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script>
+/* When the user clicks on the button,
+toggle between hiding and showing the dropdown content */
+function showDropdown() {
+    document.getElementById("myDropdown").classList.toggle("show");
+}
+function showSlider() {
+    document.getElementById("mySlider").classList.toggle("show");
+}
+
+// Close the dropdown if the user clicks outside of it
+window.onclick = function(e) {
+  if (!e.target.matches('.dropbtn') || !e.target.match('.slider')) {
+    var myDropdown = document.getElementById("myDropdown");
+    var mySlider = document.getElementById("mySlider");
+      if (myDropdown.classList.contains('show')) {
+        myDropdown.classList.remove('show');
+      }
+      if (mySlider.classList.contains('show')) {
+        mySlider.classList.remove('show');
+      }
+  }
+}
+
+var slider = document.querySelector("slider");
+var output = document.querySelector("output");
+output.innerHTML = slider.value;
+
+slider.addEventListener('slider', function(){
+  output.innerHTML = slider.value;
+});
+</script>
 <style>
-html {
-  background: #f5f7f8;
-  font-family: 'Roboto', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  padding: 0 0;
+.dropdown {
+    float: left;
+    overflow: hidden;
 }
 
-.band {
-  width: 90%;
-  max-width: 1240px;
-  margin: 20px auto;
-
-  display: grid;
-
-  grid-template-columns: 1fr;
-  grid-template-rows: auto;
-  grid-gap: 20px;
+.dropdown .dropbtn {
+    cursor: pointer;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: black;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
 }
 
-@media only screen and (min-width: 500px) {
-  .band {
-    grid-template-columns: 1fr 1fr;
-  }
+.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
+    background-color: #ddd;
 }
 
-@media only screen and (min-width: 850px) {
-  .band {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
 
-
-.card {
-  background: white;
-  text-decoration: none;
-  color: #444;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-
-  position: relative;
-  top: 0;
-  transition: all .1s ease-in;
-}
-
-.card:hover {
-  top: -2px;
-  box-shadow: 0 4px 5px rgba(0,0,0,0.2);
-}
-
-.card article {
-  padding: 20px;
-}
-
-.card .thumb {
-  padding-bottom: 60%;
-  background-size: cover;
-  background-position: center center;
-}
-
-/* typography */
-.card h1 {
-  font-size: 20px;
-  margin: 0;
-  color: #333;
-}
-
-.card p {
-  line-height: 1.4;
-}
-
-.card span {
-  font-size: 12px;
-  font-weight: bold;
-  color: #999;
-  text-transform: uppercase;
-  letter-spacing: .05em;
-  margin: 2em 0 0 0;
-}
-
-* {box-sizing: border-box;}
-
-.topnav {
-  overflow: hidden;
-  background-color: #e9e9e9;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #2196F3;
-  color: white;
-}
-
-.topnav input[type=text] {
-  float: right;
-  padding: 6px;
-  margin-top: 8px;
-  margin-right: 16px;
-  border: none;
-  font-size: 17px;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav a, .topnav input[type=text] {
+.dropdown-content a {
     float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
     display: block;
     text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.show {
+    display: block;
+}
+
+
+.slidecontainer {
     width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  .topnav input[type=text] {
-    border: 1px solid #ccc;
-  }
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #2196F3;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
 }
 </style>
+
+
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#about">About</a>
-  <a href="#contact">Contact</a>
+  <a class="active" href="https://entrepreneurs.berkeley.edu/">
+    <!-- <img src = "{% static "database/images/logo.png" %}" alt="My image" height="20px"> -->
+    Entrepreneurs @ Berkeley
+  </a>
+  <div class="dropdown">
+      <button class="dropbtn" onclick="showDropdown()">
+        <i class="fa fa-caret-down"></i>
+        Type
+        <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content" id="myDropdown">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
+
+  <div class="dropdown">
+      <button class="dropbtn" onclick="showSlider()">
+        <i class="fa fa-caret-down"></i>
+        Company Size
+        <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content" id="mySlider">
+      <div class="""slidecontainer">
+        <input type="range" min="1" max="100" value="1" class="slider" id="slider">
+        <p id="output"> Size: </p>
+      </div>
+    </div>
+  </div>
   <form action="/database/search/" method="get">
       <input type="text" name="q" placeholder="Search..">
   </form>
 </div>
+
+
+
+
+
+
+
+
+
 
 <div class="band">
     {% if all_companies %}
