--- a/database/static/database/style.css
+++ b/database/static/database/style.css
@@ -84,6 +84,8 @@ html {
 .topnav {
   overflow: hidden;
   background-color: #e9e9e9;
+  display: inline-table;
+  width: 100%;
 }
 
 .topnav a {
@@ -115,6 +117,7 @@ html {
   font-size: 17px;
 }
 
+
 @media screen and (max-width: 600px) {
   .topnav a, .topnav input[type=text] {
     float: none;
@@ -142,10 +145,11 @@ html {
     padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
-    margin: 0;
+    height: 100%;
+
 }
 
-.dropdown:hover .dropbtn, .dropbtn:focus {
+.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
     background-color: #ddd;
 }
 
@@ -158,7 +162,7 @@ html {
     z-index: 1;
 }
 
-.dropdown-content a {
+.dropdown-content a, option {
     float: none;
     color: black;
     padding: 12px 16px;
@@ -167,10 +171,52 @@ html {
     text-align: left;
 }
 
-.dropdown-content a:hover {
+.dropdown-content a:hover , option{
     background-color: #ddd;
 }
 
 .show {
     display: block;
+}
+
+
+.slidecontainer {
+    width: 100%;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #2196F3;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+.customized {
+  float: right;
 }
