--- a/database/templates/database/index.html
+++ b/database/templates/database/index.html
@@ -1,188 +1,119 @@
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'database/style.css' %}" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script>
-/* When the user clicks on the button,
-toggle between hiding and showing the dropdown content */
-function showDropdown() {
-    document.getElementById("myDropdown").classList.toggle("show");
-}
-function showSlider() {
-    document.getElementById("mySlider").classList.toggle("show");
-}
-
-// Close the dropdown if the user clicks outside of it
-window.onclick = function(e) {
-  var className = e.target.classList[0];
-  console.log(document.getElementById("myDropdown").classList);
-  if (!(className == "dropbtn" || className == "tag_choice" || className == "slider")) {
-    console.log(className);
-    var myDropdown = document.getElementById("myDropdown");
-    var mySlider = document.getElementById("mySlider");
-      if (myDropdown.classList.contains('show')) {
-        myDropdown.classList.remove('show');
-      }
-      if (mySlider.classList.contains('show')) {
-        mySlider.classList.remove('show');
-      }
-  } 
-
-  var slider = document.getElementById("slider");
-  var output = document.getElementById("output");
-  output.innerHTML = slider.value;
-}
-
-</script>
-
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
 <script>
 
+window.onclick = function(e){
+  var myDropdown = document.getElementById('myDropdown');
+  var mySlider = document.getElementById('mySlider');
+  var output = document.getElementById('output');
+  var class_list = e.target.classList;
+  console.log(class_list);
+  if(class_list.contains('company_type_toggle')) {
+    // console.log("before");
+    // console.log(myDropdown.classList);
+    if(myDropdown.classList.contains('show')){
+      myDropdown.classList.remove('show');
+    } else{
+      myDropdown.classList.add('show');
+    }
+    // console.log("after");
+    // console.log(myDropdown.classList);
+  } else if(class_list.contains('slider_toggle')) {
+    // console.log("before");
+    // console.log(mySlider.classList);
+    if(mySlider.classList.contains('show')) {
+      mySlider.classList.remove('show');
+    } else{
+      mySlider.classList.add('show');
+    }
+    // console.log("after");
+    // console.log(mySlider.classList);
+  } else {
+    if(!(class_list.contains('tag_choice') || class_list.contains('slider'))) {
+      mySlider.classList.remove('show');
+      myDropdown.classList.remove('show');
+    }
+  }
+  // console.log("************************");
+
+}
 </script>
-<style>
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-
-.dropdown .dropbtn {
-    cursor: pointer;
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: black;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-    background-color: #ddd;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a, option {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover , option{
-    background-color: #ddd;
-}
-
-.show {
-    display: block;
-}
-
-
-.slidecontainer {
-    width: 100%;
-}
-
-.slider {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 15px;
-    border-radius: 5px;
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-}
-
-.slider:hover {
-    opacity: 1;
-}
-
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: #2196F3;
-    cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: #4CAF50;
-    cursor: pointer;
-}
-</style>
-
 
 <div class="topnav">
-  <a class="active" href="https://entrepreneurs.berkeley.edu/">
-    <!-- <img src = "{% static "database/images/logo.png" %}" alt="My image" height="20px"> -->
-    Entrepreneurs @ Berkeley
-  </a>
-  <!-- tag filter -->
-  <div class="dropdown">
-      <button class="dropbtn" onclick="showDropdown()">
-        <i class="fa fa-caret-down"></i>
-        Type
-        <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content" id="myDropdown">
-      {%if all_tags %}
-          <form action="/database/filter_by_tag/" method = "get">
-            <select name="tag" multiple>
-              {% for tag in all_tags %}
-                <option class = "tag_choice" value="{{tag}}">{{tag}}</option>
-              {% endfor %}
-            </select>
-            <input type="submit">
-          </form>
-      {% endif %}
-    </div>
+  <div>
+    <a class="active" href="https://entrepreneurs.berkeley.edu/">
+      <!-- <img src = "{% static "database/images/logo.png" %}" alt="My image" height="20px"> -->
+      Entrepreneurs @ Berkeley
+    </a>
   </div>
 
-  <!-- size filter (range selector) -->
-  <div class="dropdown">
-      <button class="dropbtn" onclick="showSlider()">
-        <i class="fa fa-caret-down"></i>
-        Company Size
-        <i class="fa fa-caret-down"></i>
-      </button>
-    <div class="dropdown-content" id="mySlider">
-      <div class="slidecontainer">
-        <form action="/database/filter_by_size/" method="get">
-          <input type="range" min="1" max="100" value="1" class="slider" id="slider" name = "slider">
-          <p>Size: <span id="output">1</span>+</p>
-          <input type="submit">
-        </form>
+    <!-- tag filter -->
+    <div class="dropdown">
+        <button class="company_type_toggle dropbtn">
+          <i class="fa fa-caret-down"></i>
+          Type
+          <i class="fa fa-caret-down"></i>
+        </button>
+      <div class="dropdown-content" id="myDropdown">
+        {%if all_tags %}
+            <form action="/database/filter_by_tag/" method = "get">
+              <select name="tag" multiple>
+                {% for tag in all_tags %}
+                  <option class = "tag_choice" value="{{tag}}">{{tag}}</option>
+                {% endfor %}
+              </select>
+              <input type="submit"/>
+            </form>
+        {% endif %}
       </div>
     </div>
-  </div>
 
-  <form action="/database/search/" method="get">
-    <input type="text" name="query" placeholder="Search..">
-  </form>
+    <!-- size filter (range selector) -->
+    <div class="dropdown">
+        <button class="slider_toggle dropbtn">
+          <i class="fa fa-caret-down"></i>
+          Company Size
+          <i class="fa fa-caret-down"></i>
+        </button>
+      <div class="dropdown-content" id="mySlider">
+        <div class="slidecontainer">
+          <form action="/database/filter_by_size/" method="get">
+            <input type="range" min="1" max="100" value="1" class="slider" id="slider" name = "slider"/>
+            <p>Size: <span id="output">1</span>+</p>
+            <input type="submit">
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class= "topnav_right">
+        <form action="/database/search/" method="get">
+            <input type="text" name="search" placeholder="Search.."/>
+            <input type="submit" name="query" value="submit"/>
+        </form>
+        <input type="button" name="clear" value="clear"/>
+    </div>
+    <!-- <div>
+      <form action="/database/search/" method="get">
+          <input type="text" name="query" placeholder="Search..">
+      </form>
+    </div> -->
 </div>
+<style>
+.topnav_right{
+  float:right;
+}
 
+
+</style>
 
 <div class="band">
     {% if all_companies %}
     {% for c in all_companies %}
     <div class="item-{{ forloop.counter }}">
           <a href="{{c.company_website}}" class="card">
-            <div class="thumb" style="background-image: url({{c.company_image_url}});"></div>
+            <!-- <div class="thumb" style="background-image: url({{c.company_image_url}});"></div> -->
             <article>
               <h1>{{ c.company_name }}</h1>
               <span>{{c.company_description}}</span>
