--- a/database/static/database/style.css
+++ b/database/static/database/style.css
@@ -157,7 +157,8 @@ html {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+
+    margin-top: 46px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -219,4 +220,7 @@ html {
 }
 .customized {
   float: right;
+}
+.topnav_right{
+  float:right;
 }
