--- a/database/templates/database/index.html
+++ b/database/templates/database/index.html
@@ -7,6 +7,7 @@
 window.onclick = function(e){
   var myDropdown = document.getElementById('myDropdown');
   var mySlider = document.getElementById('mySlider');
+  var slider = document.getElementById('slider');
   var output = document.getElementById('output');
   var class_list = e.target.classList;
   console.log(class_list);
@@ -36,6 +37,8 @@ window.onclick = function(e){
       myDropdown.classList.remove('show');
     }
   }
+
+  output.innerHTML = slider.value;
   // console.log("************************");
 
 }
@@ -89,260 +92,6 @@ window.onclick = function(e){
     </div>
   </form>
 </div>
-<style>
-
-html {
-  background: #f5f7f8;
-  font-family: 'Roboto', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  padding: 0 0;
-}
-
-.band {
-  width: 90%;
-  max-width: 1240px;
-  margin: 20px auto;
-
-  display: grid;
-
-  grid-template-columns: 1fr;
-  grid-template-rows: auto;
-  grid-gap: 20px;
-}
-
-@media only screen and (min-width: 500px) {
-  .band {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media only screen and (min-width: 850px) {
-  .band {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
-}
-
-
-.card {
-  background: white;
-  text-decoration: none;
-  color: #444;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-
-  position: relative;
-  top: 0;
-  transition: all .1s ease-in;
-}
-
-.card:hover {
-  top: -2px;
-  box-shadow: 0 4px 5px rgba(0,0,0,0.2);
-}
-
-.card article {
-  padding: 20px;
-}
-
-.card .thumb {
-  /* padding-bottom: 60%; */
-  /* background-size: cover;
-  background-position: center center; */
-}
-
-/* typography */
-.card h1 {
-  font-size: 20px;
-  margin: 0;
-  color: #333;
-}
-
-.card p {
-  line-height: 1.4;
-}
-
-.card span {
-  font-size: 12px;
-  font-weight: bold;
-  color: #999;
-  text-transform: uppercase;
-  letter-spacing: .05em;
-  margin: 2em 0 0 0;
-}
-
-* {box-sizing: border-box;}
-
-.topnav {
-  overflow: hidden;
-  background-color: #e9e9e9;
-  display: inline-table;
-  width: 100%;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #2196F3;
-  color: white;
-}
-
-.topnav input[type=text] {
-  float: right;
-  padding: 6px;
-  margin-top: 8px;
-  margin-right: 16px;
-  border: none;
-  font-size: 17px;
-}
-
-
-@media screen and (max-width: 600px) {
-  .topnav a, .topnav input[type=text] {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  .topnav input[type=text] {
-    border: 1px solid #ccc;
-  }
-}
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-
-.dropdown .dropbtn {
-    cursor: pointer;
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: black;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    height: 100%;
-
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-    background-color: #ddd;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-
-    margin-top: 46px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a, option {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover , option{
-    background-color: #ddd;
-}
-
-.show {
-    display: block;
-}
-
-
-.slidecontainer {
-    width: 100%;
-}
-
-.slider {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 15px;
-    border-radius: 5px;
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-}
-
-.slider:hover {
-    opacity: 1;
-}
-
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: #2196F3;
-    cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: #4CAF50;
-    cursor: pointer;
-}
-.customized {
-  float: right;
-}
-.topnav_right{
-  float:right;
-  display: inline-flex;
-}
-.topnav_right #submit{
-    background-color: #2196F3; /* Red */
-    border: none;
-    color: white;
-    padding: 15px 46px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 0px 0px;
-    cursor: pointer;
-}
-.topnav_right #clear {
-  background-color: #f44336; /* Red */
-  border: none;
-  color: white;
-  padding: 15px 46px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 0px 0px;
-  cursor: pointer;
-}
-</style>
 
 <div class="band">
     {% if all_companies %}
