--- a/database/templates/database/index.html
+++ b/database/templates/database/index.html
@@ -164,7 +164,6 @@ html {
   font-size: 17px;
 }
 
-
 @media screen and (max-width: 600px) {
   .topnav a, .topnav input[type=text] {
     float: none;
@@ -362,6 +361,41 @@ html {
       <a id = "clear"> Clear </a>
     </div>
   </form>
+</div>
+<style>
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 8px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
+.querynav {
+  overflow: hidden;
+  /* background-color: #f5f7f8; */
+  display: inline-table;
+  width: 100%;
+}
+
+.button1 {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.button2:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+</style>
+<div class="querynav" >
+  <button class="button button2">鼠标悬停后出现阴影</button>
+  <button class="button button2">鼠标悬停后出现阴影</button>
+  <button class="button button2">鼠标悬停后出现阴影</button>
 </div>
 
 <div class="band">
